add new route to get appt by id
